# stargazer-probe

./: .gitignore  README.md
Assets/: UniversalRenderPipelineGlobalSettings.asset  packages.config  stargazer-probe.unity
Assets/Editor/: SceneSetupTool.cs
Assets/Plugins/Android/: AndroidManifest.xml
Assets/Plugins/Android/src/main/java/com/stargazerprobe/camera/: Camera2Capture.java
Assets/Scenes/: SampleScene.unity
Assets/Scripts/Camera/: ARFoundationCameraCapture.cs  Camera2CameraCapture.cs  CameraCaptureFactory.cs  CameraFrameEncoder.cs  CameraTypes.cs  ICameraCapture.cs  MobileCameraCapture.cs
Assets/Scripts/Config/: SystemConfig.cs
Assets/Scripts/Editor/: ResetPlayerPrefs.cs
Assets/Scripts/Grpc/: GrpcDataStreamer.cs  GrpcStreamClient.cs  ProtoConverters.cs
Assets/Scripts/Grpc/Proto/: sensor_stream.proto
Assets/Scripts/Sensors/: IMUDataAccumulator.cs  IMUSensorManager.cs
Assets/Scripts/Sync/: TimeSyncManager.cs
Assets/Scripts/UI/: ResponsiveUILayout.cs  SettingsPanel.cs  UIManager.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/Shaders/: UIRawImageRotate.shader
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
scripts/: deploy_test_server.sh  generate_proto_unity.sh
test-server-cpp/: CMakeLists.txt
test-server-cpp/proto/: sensor.proto  sensor_stream.proto
test-server-cpp/src/: main.cc
